added input and button

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <p class="text-center">
           get access to locked articles
         </p>
+       
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="article url">
+            <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Unlock 🔓</button>
+            </span>
+        </div>
       </main>
 
       
